--- a/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
+++ b/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model TailSpin.SpaceGame.Web.Models.LeaderboardViewModel
 @{
-    ViewData["Title"] = "Welcome to ofifcial page of Space Game!";
+    ViewData["Title"] = "Welcome to official page of Space Game!";
 }
 <section class="intro">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
-        <p>Welcome to ofifcial page of Space Game!</p>
+        <p>Welcome to official page of Space Game!</p>
     </div>
 </section>
 <section class="download">
